QClassFactory::CreateInstanceHelper(): make variable argc static

Otherwise, crashes occur when accessing the arguments of QCoreApplication
since the variable is passed by reference.

Task-number: QTBUG-59047
Change-Id: I5cbeb86814ab048e6d815498484108e9dc828d0a
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
(cherry picked from commit c0d93d408d4eafcaab06d455b8c3ce1e2c21f8db)
Reviewed-by: Jussi Witick <jussi.witick@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>