src/activeqt/control/qaxserverbase.cpp
@@ -902,7 +902,7 @@ public:
         // Make sure a QApplication instance is present (inprocess case)
         if (!qApp) {
             qax_ownQApp = true;
-            int argc = 0;
+            static int argc = 0;  // static lifetime, since it's passed as reference to QApplication, which has a lifetime exceeding the stack frame
             new QApplication(argc, 0);
         }
         QGuiApplication::setQuitOnLastWindowClosed(false);
